# rpncalc

./: .gitignore  CODEOWNERS  Cargo.toml  LICENSE  Makefile.toml  README.md  appdirectory.d.ts  center-align.d.ts  clippy.toml  index.html  index.js  index.ts  ink.d.ts  jison.d.ts  jsx.d.ts  package-lock.json  package.json  rpncalc  rpncalc.bat  tsconfig.json  tsd.json  webpack.config.js
.devcontainer/: Dockerfile  devcontainer.json
data/: app.js
lib/: expressionEvaluator.js  keys.js  mathHelpers.js  routes.js  rpncalc.js  server.js  stackItem.js  units.js
lib/cli/: AutoComplete.tsx  InkToReactBridge.ts  Input.tsx  RpnCli.tsx  Stack.tsx  StatusLine.tsx
lib/expression/: ExpressionParser.test.ts  ExpressionParser.ts  expression.jison
lib/rpn/: DecimalStackItem.ts  ExpressionStackItem.ts  RpnCalculator.test.ts  RpnCalculator.ts  StackItem.ts
src/: actions.js  actions.ts  angle_type.rs  constant.rs  error.rs  function.rs  index.js  index.jsx  index.tsx  main.rs  number.rs  operator.rs  rpn_calc.rs  stack.rs  stack_item.rs  state.rs  styles.js  styles.ts  types.d.ts  ui.rs  ui_less.rs  undo_stack.rs  units.rs  utils.js  utils.ts
src/cli/: RpnCalcCli.ts  index.ts
src/expr/: expr.pest  lexer.rs  mod.rs  parser.rs  reader.rs  run.rs
src/func/: add.rs  cos.rs  divide.rs  mod.rs  multiply.rs  sin.rs  subtract.rs  tan.rs
src/functions/: add.rs  category.rs  cos.rs  cosine.rs  degrees.rs  divide.rs  drop.rs  function.rs  mod.rs  multiply.rs  pow.rs  radians.rs  sin.rs  sine.rs  square_root.rs  subtract.rs  tan.rs  tangent.rs
src/models/: stackItem.js  stackItem.ts  state.js  state.ts
src/parser/: expr.pest  mod.rs
src/reducers/: index.js  index.ts
src/rpn/: RpnCalc.ts
src/stack/: item.rs  mod.rs
src/state/: angle_mode.rs  constant.rs  input.rs  mod.rs
src/tui/: column_layout.rs  console.rs  control.rs  help.rs  less.rs  message.rs  mod.rs  (+5 more)
test/: expressionEvaluatorTest.js
typings/: tsd.d.ts
web_loaders/: nw-loader.web-loader.js
win32-launcher/: .gitignore  launch.cpp  launch.rc  launch.vcxproj
(+134 files in other folders)
