[package]
name = "rpncalc"
edition = "2021"
version = "0.1.0"
rust-version = "1.73.0"
authors = ["Joe Ferner <joe@fernsroth.com>"]
description = "A command line RPN calculator."
documentation = "https://github.com/joeferner/rpncalc/blob/master/README.md"
homepage = "https://github.com/joeferner/rpncalc"
repository = "https://github.com/joeferner/rpncalc"
keywords = ["rpncalc", "calculator", "rpn"]
readme = "README.md"
license-file = "LICENSE"
exclude = ["/.github/*", "/Makefile.toml", "/clippy.toml", "/rustfmt.toml"]

[features]
default = ["copypasta"]

[dependencies]
approx = "0.5.1"
color-eyre = "0.6.2"
copypasta = { version = "0.10.0", optional = true }
crossterm = "0.27.0"
exitcode = "1.1.2"
regex = "1.10.2"
thiserror = "1.0.50"

[dev-dependencies]
rusty-hook = "0.11.2"
