[package]
name = "rpncalc"
version = "0.1.0"
edition = "2021"

[dependencies]
annotate-snippets = "0.11.4"
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
crossterm = "0.28.1"
dirs = "5.0.1"
lazy_static = "1.5.0"
log = "0.4.22"
log4rs = "1.3.0"
num-format = { version = "0.4.4", features = ["with-system-locale"] }
ratatui = "0.29.0"
regex = "1.11.1"
